// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render a button with children 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#6498e6",
      "borderRadius": 8,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 8,
      "paddingVertical": 12,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "fontSize": 16,
        "justifyContent": "center",
      }
    }
  >
    button Text
  </Text>
</View>
`;

exports[`<Button/> should render a button with children and an onPress calback 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#6498e6",
      "borderRadius": 8,
      "marginVertical": 4,
      "opacity": 1,
      "paddingHorizontal": 8,
      "paddingVertical": 12,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "fontSize": 16,
        "justifyContent": "center",
      }
    }
  >
    button Text
  </Text>
</View>
`;
